--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,12 @@
       "es2018",
       "dom"
     ]
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "files": [
+    "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxbargauge.ts",
+    "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxinput.ts"
+  ]
 }
