--- a/package.json
+++ b/package.json
@@ -23,12 +23,27 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@progress/kendo-angular-buttons": "^4.3.3",
+    "@progress/kendo-angular-dateinputs": "^3.6.0",
+    "@progress/kendo-angular-dialog": "^3.11.0",
+    "@progress/kendo-angular-dropdowns": "^3.5.1",
+    "@progress/kendo-angular-inputs": "^4.2.0",
+    "@progress/kendo-angular-intl": "^1.7.0",
+    "@progress/kendo-angular-l10n": "^1.3.0",
+    "@progress/kendo-angular-popup": "^2.5.0",
+    "@progress/kendo-angular-resize-sensor": "^3.1.2",
+    "@progress/kendo-angular-scheduler": "^0.9.0",
+    "@progress/kendo-data-query": "^1.5.0",
+    "@progress/kendo-date-math": "^1.4.0",
+    "@progress/kendo-drawing": "^1.5.9",
+    "@progress/kendo-recurrence": "^0.1.2",
+    "@progress/kendo-theme-material": "^2.3.1",
     "@types/inputmask": "^4.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.8.6",
     "inputmask": "^4.0.6",
-    "jqwidgets-scripts": "^7.1.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
